--- a/styles/page-style.css
+++ b/styles/page-style.css
@@ -1,3 +1,6 @@
+* {
+    box-sizing: border-box;
+}
 h1, h2 {
     font-family: 'Noto Serif', serif;
 }
@@ -39,13 +42,14 @@ img {
 figure {
     padding: 0.5em;
     border: thin silver solid;
-    width: 98%;
+    width: 100%;
     margin: auto;
 }
 
 figcaption {
     text-align: center;
     font-style: italic;
+    font-size: 18px;
 }
 
 ::selection {
